// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HeartButton renders Activated 1`] = `
<body>
  <div>
    <div
      style="width: 36px;"
    >
      <button
        class="HeartButton_heartButtonStyles_root__ap10oo3"
        disabled=""
        type="button"
      >
        <div
          class="HeartButton_heartButtonStyles_iconWrapper__ap10oo4"
        >
          <svg
            fill="currentColor"
            stroke="currentColor"
            stroke-width="1.5"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M21 8.25c0-2.485-2.099-4.5-4.688-4.5-1.935 0-3.597 1.126-4.312 2.733-.715-1.607-2.377-2.733-4.313-2.733C5.1 3.75 3 5.765 3 8.25c0 7.22 9 12 9 12s9-4.78 9-12z"
              stroke-linecap="round"
              stroke-linejoin="round"
            />
          </svg>
        </div>
      </button>
    </div>
  </div>
</body>
`;

exports[`HeartButton renders ClickButton 1`] = `
<body>
  <div>
    <div
      style="width: 36px;"
    >
      <button
        class="HeartButton_heartButtonStyles_root__ap10oo3"
        disabled=""
        type="button"
      >
        <div
          class="HeartButton_heartButtonStyles_animationCircleContainer__ap10oo6"
        >
          <div
            class="HeartButton_heartButtonStyles_animationCircle__ap10oo7 HeartButton_heartButtonStyles_animationCircle_index_0__ap10oo8"
          />
          <div
            class="HeartButton_heartButtonStyles_animationCircle__ap10oo7 HeartButton_heartButtonStyles_animationCircle_index_1__ap10oo9"
          />
          <div
            class="HeartButton_heartButtonStyles_animationCircle__ap10oo7 HeartButton_heartButtonStyles_animationCircle_index_2__ap10ooa"
          />
          <div
            class="HeartButton_heartButtonStyles_animationCircle__ap10oo7 HeartButton_heartButtonStyles_animationCircle_index_3__ap10oob"
          />
          <div
            class="HeartButton_heartButtonStyles_animationCircle__ap10oo7 HeartButton_heartButtonStyles_animationCircle_index_4__ap10ooc"
          />
          <div
            class="HeartButton_heartButtonStyles_animationCircle__ap10oo7 HeartButton_heartButtonStyles_animationCircle_index_5__ap10ood"
          />
        </div>
        <div
          class="HeartButton_heartButtonStyles_iconWrapper__ap10oo4 HeartButton_heartButtonStyles_iconWrapper_animationFired_true__ap10oo5"
        >
          <svg
            fill="currentColor"
            stroke="currentColor"
            stroke-width="1.5"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M21 8.25c0-2.485-2.099-4.5-4.688-4.5-1.935 0-3.597 1.126-4.312 2.733-.715-1.607-2.377-2.733-4.313-2.733C5.1 3.75 3 5.765 3 8.25c0 7.22 9 12 9 12s9-4.78 9-12z"
              stroke-linecap="round"
              stroke-linejoin="round"
            />
          </svg>
        </div>
      </button>
    </div>
  </div>
</body>
`;

exports[`HeartButton renders Default 1`] = `
<body>
  <div>
    <div
      style="width: 36px;"
    >
      <button
        class="HeartButton_heartButtonStyles_root__ap10oo3"
        type="button"
      >
        <div
          class="HeartButton_heartButtonStyles_iconWrapper__ap10oo4"
        >
          <svg
            fill="none"
            stroke="currentColor"
            stroke-width="1.5"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M21 8.25c0-2.485-2.099-4.5-4.688-4.5-1.935 0-3.597 1.126-4.312 2.733-.715-1.607-2.377-2.733-4.313-2.733C5.1 3.75 3 5.765 3 8.25c0 7.22 9 12 9 12s9-4.78 9-12z"
              stroke-linecap="round"
              stroke-linejoin="round"
            />
          </svg>
        </div>
      </button>
    </div>
  </div>
</body>
`;
